refactoring intersections and creating image with emission